# console-web

./: Dockerfile  README.md  deploy.sh  docker-compose.yml  main.py  requirements.txt  setup.cfg  sitecustomize.py  start.sh
.github/workflows/: docker-publish.yml
app/: __init__.py  main.py
