[metadata]
name = console-web
version = 0.1.0
description = "Flask-based console-style system status dashboard"
author = "console-web maintainers"

[options]
packages = find:
py_modules = main, sitecustomize
install_requires =
    flask
    psutil
python_requires = >=3.9

[options.packages.find]
where = .
